translations for erpprojects

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -62,34 +62,35 @@
     },
 
     "erpProjects": {
-      "title": "مشاريع ERP الخاصة بنا",
+      "title": "مشاريع تخطيط موارد المؤسسات لدينا",
       "projects": [
         {
           "id": 1,
-          "title": "لوحة تحليلات المبيعات",
-          "description": "لوحة تحليلات المبيعات هي أداة تحليلية متقدمة مصممة لتزويد الشركات ببيانات مبيعات شاملة في الوقت الفعلي.",
+          "title": "لوحة معلومات رؤى المبيعات",
+          "description": "لوحة معلومات رؤى المبيعات هي أداة تحليل متقدمة مصممة لتزويد الشركات ببيانات مبيعات شاملة في الوقت الفعلي. توفر واجهة ديناميكية وتفاعلية تتيح للمستخدمين تصور أداء المبيعات عبر أبعاد مختلفة، بما في ذلك خطوط الإنتاج والمناطق الجغرافية والفترات الزمنية. تتكامل لوحة المعلومات هذه مع أنظمة تخطيط موارد المؤسسات الحالية لاستخراج وتوحيد بيانات المبيعات، وتقديمها بتنسيق واضح وقابل للتنفيذ. تشمل الميزات الرئيسية الرسوم البيانية القابلة للتخصيص، وقدرات التنقل لأسفل لاستكشاف البيانات التفصيلية، والتحليلات التنبؤية التي تتنبأ باتجاهات المبيعات المستقبلية. من خلال الاستفادة من هذه الأداة، يمكن للشركات تحديد المنتجات ذات الأداء الأفضل، وتحديد مجالات التحسين، واتخاذ قرارات مستنيرة لتحسين استراتيجيات المبيعات وزيادة نمو الإيرادات. تسهل لوحة المعلومات أيضًا إنشاء تقارير مبيعات مفصلة، مما يمكّن أصحاب المصلحة من تتبع التقدم وقياس تأثير مبادرات المبيعات. إنها تمكن فرق المبيعات بالمعلومات التي يحتاجون إليها لإغلاق الصفقات بشكل أسرع وأكثر فعالية، مما يعزز في النهاية أداء المبيعات العام والربحية.",
           "image": "project_14.png"
         },
         {
           "id": 2,
           "title": "تحليلات تحسين العملاء",
-          "description": "أداة تحليلات تحسين العملاء تمكن الشركات من الحصول على رؤى متعمقة حول تفاعل العملاء.",
+          "description": "تمكن أداة تحليلات تحسين العملاء الشركات من الحصول على رؤى عميقة حول مشاركة العملاء وسلوكهم ورضاهم. إنها تتجاوز بيانات إدارة علاقات العملاء الأساسية من خلال توفير تحليلات متقدمة تكشف الأنماط والاتجاهات في تفاعلات العملاء. تتكامل هذه الأداة مع مصادر بيانات مختلفة، بما في ذلك أنظمة إدارة علاقات العملاء ومنصات دعم العملاء وأدوات أتمتة التسويق، لتوفير رؤية شاملة لدورة حياة العميل. تتميز بقدرات تجزئة متطورة، مما يسمح للشركات بتحديد العملاء ذوي القيمة العالية وتخصيص خدماتهم وفقًا لذلك. تتضمن الأداة أيضًا تحليلًا للمشاعر يقيم ملاحظات العملاء ويحدد مجالات التحسين. من خلال فهم احتياجات العملاء وتفضيلاتهم، يمكن للشركات تعزيز الاحتفاظ بالعملاء وزيادة القيمة الدائمة للعميل وتحسين رضا العملاء بشكل عام. تقوم أداة تحليلات تحسين العملاء أيضًا بإنشاء تقارير ولوحات معلومات قابلة للتنفيذ توفر رؤى حول مخاطر فقدان العملاء وفرص البيع الإضافي وإمكانات البيع المتبادل. إنها تساعد الشركات على معالجة مشكلات العملاء بشكل استباقي وتخصيص تفاعلاتهم، وتعزيز علاقات أقوى مع العملاء وزيادة الولاء على المدى الطويل.",
           "image": "project_15.png"
         },
         {
           "id": 3,
-          "title": "لوحة أداء الحملة",
-          "description": "تساعد لوحة أداء الحملة الشركات على مراقبة وتحسين حملاتها التسويقية.",
+          "title": "لوحة معلومات أداء الحملة",
+          "description": "تساعد لوحة معلومات أداء الحملة الشركات على مراقبة وتحسين حملاتها التسويقية عبر قنوات مختلفة. توفر منصة مركزية لتتبع مؤشرات الأداء الرئيسية (KPIs)، مثل نسب النقر إلى الظهور ومعدلات التحويل والعائد على الاستثمار (ROI). تتكامل لوحة المعلومات هذه مع منصات أتمتة التسويق ومنصات الوسائط الاجتماعية وشبكات الإعلان لتوفير رؤية شاملة لأداء الحملة. تتضمن تحليلات في الوقت الفعلي تسمح للشركات باتخاذ قرارات قائمة على البيانات وتعديل حملاتها أثناء التنقل. تشمل الميزات الرئيسية لوحات معلومات قابلة للتخصيص وتقارير آلية وقدرات اختبار A/B. من خلال الاستفادة من هذه الأداة، يمكن للشركات تحديد قنوات التسويق الأكثر فعالية وتحسين إنفاقها الإعلاني وتحسين الفعالية العامة لحملاتها التسويقية. تسهل لوحة معلومات أداء الحملة أيضًا إنشاء تقارير حملة مفصلة، مما يمكّن المسوقين من تتبع التقدم وقياس تأثير مبادراتهم. إنها تمكن فرق التسويق بالرؤى التي يحتاجون إليها لزيادة عائد الاستثمار التسويقي وتحقيق أهداف حملتهم.",
           "image": "project_16.png"
         },
         {
           "id": 4,
-          "title": "تدفق تسجيل سلس",
-          "description": "تعمل عملية التسجيل السلسة على تبسيط وتحسين عملية التسجيل للمستخدمين الجدد.",
+          "title": "تدفق عمل الإعداد السلس",
+          "description": "يبسط تدفق عمل الإعداد السلس ويعزز عملية الإعداد للمستخدمين الجدد، مما يضمن انتقالًا سلسًا وفعالًا. تعمل هذه الأداة على أتمتة مهام الإعداد الرئيسية، مثل إنشاء الحساب وتوفير الوصول وتوزيع المواد التدريبية. توفر واجهة سهلة الاستخدام توجه المستخدمين الجدد خلال عملية الإعداد، مما يقلل من الارتباك ويقلل الوقت المطلوب للإعداد. يتكامل تدفق العمل مع أنظمة الموارد البشرية والمنصات الأخرى ذات الصلة لضمان تدفق سلس للمعلومات. تشمل الميزات الرئيسية الإشعارات الآلية وتتبع التقدم وقوائم التحقق من الإعداد القابلة للتخصيص. من خلال تبسيط عملية الإعداد، يمكن للشركات تحسين رضا المستخدمين الجدد وتقليل تكاليف الإعداد وتعزيز الإنتاجية. يسهل تدفق عمل الإعداد السلس أيضًا إنشاء تقارير إعداد مفصلة، مما يمكّن فرق الموارد البشرية من تتبع التقدم وتحديد مجالات التحسين. إنها تمكن فرق الموارد البشرية من إنشاء تجربة إعداد إيجابية تهيئ المستخدمين الجدد للنجاح.",
           "image": "project_17.png"
         }
       ]
     },
+
     "ormSection": {
       "title": "إدارة السمعة عبر الإنترنت وإدارة المكتب الخلفي المعتمدة على الذكاء الاصطناعي",
       "description": "قم بإدارة سمعتك عبر الإنترنت لبناء الثقة، والتفاعل مع جمهورك، وتعزيز صورة علامتك التجارية.",
