--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -60,32 +60,31 @@
         { "value": "৫+", "label": "ক্লায়েন্ট" }
       ]
     },
-
     "erpProjects": {
       "title": "আমাদের ইআরপি প্রকল্পসমূহ",
       "projects": [
         {
           "id": 1,
           "title": "বিক্রয় অন্তর্দৃষ্টি ড্যাশবোর্ড",
-          "description": "বিক্রয় অন্তর্দৃষ্টি ড্যাশবোর্ড হল একটি উন্নত বিশ্লেষণাত্মক টুল যা ব্যবসার জন্য সময়োপযোগী বিক্রয় ডেটা প্রদান করে।",
+          "description": "বিক্রয় অন্তর্দৃষ্টি ড্যাশবোর্ড একটি উন্নত বিশ্লেষণ সরঞ্জাম যা ব্যবসাগুলিকে ব্যাপক, রিয়েল-টাইম বিক্রয় ডেটা সরবরাহ করার জন্য ডিজাইন করা হয়েছে। এটি একটি গতিশীল এবং ইন্টারেক্টিভ ইন্টারফেস সরবরাহ করে যা ব্যবহারকারীদের পণ্য লাইন, ভৌগলিক অঞ্চল এবং সময়কাল সহ বিভিন্ন মাত্রায় বিক্রয় কর্মক্ষমতা কল্পনা করতে দেয়। এই ড্যাশবোর্ডটি বিদ্যমান ইআরপি সিস্টেমের সাথে একত্রিত হয়ে বিক্রয় ডেটা বের করে এবং একত্রিত করে, এটিকে একটি স্পষ্ট এবং কার্যকরী বিন্যাসে উপস্থাপন করে। মূল বৈশিষ্ট্যগুলির মধ্যে রয়েছে কাস্টমাইজযোগ্য চার্ট এবং গ্রাফ, গ্রানুলার ডেটা অন্বেষণ করার জন্য ড্রিল-ডাউন ক্ষমতা এবং ভবিষ্যদ্বাণীমূলক বিশ্লেষণ যা ভবিষ্যতের বিক্রয় প্রবণতাগুলির পূর্বাভাস দেয়। এই সরঞ্জামটি ব্যবহার করে, ব্যবসাগুলি শীর্ষ-পারফর্মিং পণ্যগুলি সনাক্ত করতে, উন্নতির জন্য ক্ষেত্রগুলি চিহ্নিত করতে এবং তাদের বিক্রয় কৌশলগুলি অপ্টিমাইজ করতে এবং রাজস্ব বৃদ্ধি করতে অবগত সিদ্ধান্ত নিতে পারে। ড্যাশবোর্ডটি বিস্তারিত বিক্রয় প্রতিবেদন তৈরি করতে সহায়তা করে, যা স্টেকহোল্ডারদের অগ্রগতি ট্র্যাক করতে এবং বিক্রয় উদ্যোগের প্রভাব পরিমাপ করতে সক্ষম করে। এটি বিক্রয় দলগুলিকে তাদের প্রয়োজনীয় তথ্য দিয়ে ক্ষমতায়ন করে যাতে তারা দ্রুত এবং আরও কার্যকরভাবে চুক্তি বন্ধ করতে পারে, শেষ পর্যন্ত সামগ্রিক বিক্রয় কর্মক্ষমতা এবং লাভজনকতা বৃদ্ধি করে।",
           "image": "project_14.png"
         },
         {
           "id": 2,
-          "title": "ক্লায়েন্ট অপ্টিমাইজেশন বিশ্লেষণ",
-          "description": "ক্লায়েন্ট অপ্টিমাইজেশন বিশ্লেষণ টুল ক্লায়েন্টের ব্যস্ততার গভীর অন্তর্দৃষ্টি প্রদান করে।",
+          "title": "ক্লায়েন্ট অপ্টিমাইজেশান বিশ্লেষণ",
+          "description": "ক্লায়েন্ট অপ্টিমাইজেশান বিশ্লেষণ সরঞ্জাম ব্যবসাগুলিকে ক্লায়েন্টের সম্পৃক্ততা, আচরণ এবং সন্তুষ্টি সম্পর্কে গভীর অন্তর্দৃষ্টি দিয়ে ক্ষমতায়ন করে। এটি ক্লায়েন্ট মিথস্ক্রিয়ায় নিদর্শন এবং প্রবণতা প্রকাশ করে এমন উন্নত বিশ্লেষণ সরবরাহ করে প্রাথমিক সিআরএম ডেটার বাইরে যায়। এই সরঞ্জামটি বিভিন্ন ডেটা উত্স, যেমন সিআরএম সিস্টেম, গ্রাহক সহায়তা প্ল্যাটফর্ম এবং বিপণন অটোমেশন সরঞ্জামগুলির সাথে একত্রিত হয়ে ক্লায়েন্ট জীবনচক্রের একটি সামগ্রিক দৃশ্য সরবরাহ করে। এতে অত্যাধুনিক সেগমেন্টেশন ক্ষমতা রয়েছে, যা ব্যবসাগুলিকে উচ্চ-মূল্যের ক্লায়েন্টদের সনাক্ত করতে এবং সেই অনুযায়ী তাদের পরিষেবাগুলি তৈরি করতে দেয়। সরঞ্জামটিতে অনুভূতি বিশ্লেষণও অন্তর্ভুক্ত রয়েছে যা ক্লায়েন্টের প্রতিক্রিয়া মূল্যায়ন করে এবং উন্নতির জন্য ক্ষেত্রগুলি চিহ্নিত করে। ক্লায়েন্টের চাহিদা এবং পছন্দগুলি বোঝার মাধ্যমে, ব্যবসাগুলি ক্লায়েন্ট ধরে রাখা বাড়াতে, ক্লায়েন্টের জীবনকালের মান বাড়াতে এবং সামগ্রিক ক্লায়েন্ট সন্তুষ্টি উন্নত করতে পারে। ক্লায়েন্ট অপ্টিমাইজেশান বিশ্লেষণ সরঞ্জামটি কার্যকরী প্রতিবেদন এবং ড্যাশবোর্ড তৈরি করে যা ক্লায়েন্ট চূর্ণ ঝুঁকি, আপসেলিং সুযোগ এবং ক্রস-সেলিং সম্ভাবনা সম্পর্কে অন্তর্দৃষ্টি প্রদান করে। এটি ব্যবসাগুলিকে সক্রিয়ভাবে ক্লায়েন্টের সমস্যাগুলি সমাধান করতে এবং তাদের মিথস্ক্রিয়াগুলিকে ব্যক্তিগতকৃত করতে সহায়তা করে, শক্তিশালী ক্লায়েন্ট সম্পর্ক তৈরি করে এবং দীর্ঘমেয়াদী আনুগত্য বাড়ায়।",
           "image": "project_15.png"
         },
         {
           "id": 3,
-          "title": "ক্যাম্পেইন পারফরম্যান্স ড্যাশবোর্ড",
-          "description": "ক্যাম্পেইন পারফরম্যান্স ড্যাশবোর্ড ব্যবসাগুলিকে তাদের বিপণন প্রচারণা পর্যবেক্ষণ এবং অপ্টিমাইজ করতে সহায়তা করে।",
+          "title": "প্রচার কর্মক্ষমতা ড্যাশবোর্ড",
+          "description": "প্রচার কর্মক্ষমতা ড্যাশবোর্ড ব্যবসাগুলিকে বিভিন্ন চ্যানেলে তাদের বিপণন প্রচারগুলি পর্যবেক্ষণ এবং অপ্টিমাইজ করতে সহায়তা করে। এটি ক্লিক-থ্রু রেট, রূপান্তর হার এবং বিনিয়োগের উপর রিটার্ন (আরওআই) এর মতো মূল কর্মক্ষমতা সূচক (কেপিআই) ট্র্যাক করার জন্য একটি কেন্দ্রীভূত প্ল্যাটফর্ম সরবরাহ করে। এই ড্যাশবোর্ডটি বিপণন অটোমেশন প্ল্যাটফর্ম, সোশ্যাল মিডিয়া প্ল্যাটফর্ম এবং বিজ্ঞাপন নেটওয়ার্কের সাথে একত্রিত হয়ে প্রচার কর্মক্ষমতার একটি বিস্তৃত দৃশ্য সরবরাহ করে। এতে রিয়েল-টাইম বিশ্লেষণ অন্তর্ভুক্ত রয়েছে যা ব্যবসাগুলিকে ডেটা-চালিত সিদ্ধান্ত নিতে এবং তাদের প্রচারগুলি তাৎক্ষণিকভাবে সামঞ্জস্য করতে দেয়। মূল বৈশিষ্ট্যগুলির মধ্যে রয়েছে কাস্টমাইজযোগ্য ড্যাশবোর্ড, স্বয়ংক্রিয় রিপোর্টিং এবং এ/বি টেস্টিং ক্ষমতা। এই সরঞ্জামটি ব্যবহার করে, ব্যবসাগুলি সবচেয়ে কার্যকর বিপণন চ্যানেলগুলি সনাক্ত করতে, তাদের বিজ্ঞাপনের ব্যয় অপ্টিমাইজ করতে এবং তাদের বিপণন প্রচারের সামগ্রিক কার্যকারিতা উন্নত করতে পারে। প্রচার কর্মক্ষমতা ড্যাশবোর্ড বিস্তারিত প্রচার প্রতিবেদন তৈরি করতে সহায়তা করে, যা বিপণনকারীদের অগ্রগতি ট্র্যাক করতে এবং তাদের উদ্যোগের প্রভাব পরিমাপ করতে সক্ষম করে। এটি বিপণন দলগুলিকে তাদের বিপণন আরওআই সর্বাধিক করতে এবং তাদের প্রচারের উদ্দেশ্যগুলি অর্জনের জন্য প্রয়োজনীয় অন্তর্দৃষ্টি দিয়ে ক্ষমতায়ন করে।",
           "image": "project_16.png"
         },
         {
           "id": 4,
-          "title": "নিরবিচ্ছিন্ন অনবোর্ডিং ওয়ার্কফ্লো",
-          "description": "নিরবিচ্ছিন্ন অনবোর্ডিং ওয়ার্কফ্লো নতুন ব্যবহারকারীদের জন্য অনবোর্ডিং প্রক্রিয়াকে সহজ এবং উন্নত করে।",
+          "title": "নির্বিঘ্ন অনবোর্ডিং ওয়ার্কফ্লো",
+          "description": "নির্বিঘ্ন অনবোর্ডিং ওয়ার্কফ্লো নতুন ব্যবহারকারীদের জন্য অনবোর্ডিং প্রক্রিয়াটিকে সহজ এবং উন্নত করে, একটি মসৃণ এবং দক্ষ স্থানান্তর নিশ্চিত করে। এই সরঞ্জামটি অ্যাকাউন্ট তৈরি, অ্যাক্সেস বিধান এবং প্রশিক্ষণ সামগ্রী বিতরণের মতো মূল অনবোর্ডিং কাজগুলি স্বয়ংক্রিয় করে। এটি একটি ব্যবহারকারী-বান্ধব ইন্টারফেস সরবরাহ করে যা নতুন ব্যবহারকারীদের অনবোর্ডিং প্রক্রিয়ার মাধ্যমে গাইড করে, বিভ্রান্তি হ্রাস করে এবং অনবোর্ডিংয়ের জন্য প্রয়োজনীয় সময় হ্রাস করে। ওয়ার্কফ্লো এইচআর সিস্টেম এবং অন্যান্য প্রাসঙ্গিক প্ল্যাটফর্মের সাথে একত্রিত হয়ে তথ্যের একটি নির্বিঘ্ন প্রবাহ নিশ্চিত করে। মূল বৈশিষ্ট্যগুলির মধ্যে রয়েছে স্বয়ংক্রিয় বিজ্ঞপ্তি, অগ্রগতি ট্র্যাকিং এবং কাস্টমাইজযোগ্য অনবোর্ডিং চেকলিস্ট। অনবোর্ডিং প্রক্রিয়াটিকে সুগম করার মাধ্যমে, ব্যবসাগুলি নতুন ব্যবহারকারীর সন্তুষ্টি উন্নত করতে, অনবোর্ডিং খরচ কমাতে এবং উত্পাদনশীলতা বাড়াতে পারে। নির্বিঘ্ন অনবোর্ডিং ওয়ার্কফ্লো বিস্তারিত অনবোর্ডিং প্রতিবেদন তৈরি করতে সহায়তা করে, যা এইচআর দলগুলিকে অগ্রগতি ট্র্যাক করতে এবং উন্নতির জন্য ক্ষেত্রগুলি সনাক্ত করতে সক্ষম করে। এটি এইচআর দলগুলিকে একটি ইতিবাচক অনবোর্ডিং অভিজ্ঞতা তৈরি করতে ক্ষমতায়ন করে যা নতুন ব্যবহারকারীদের সাফল্যের জন্য প্রস্তুত করে।",
           "image": "project_17.png"
         }
       ]
