--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -62,30 +62,30 @@
     },
 
     "erpProjects": {
-      "title": "私たちのERPプロジェクト",
+      "title": "当社のERPプロジェクト",
       "projects": [
         {
           "id": 1,
-          "title": "セールスインサイトダッシュボード",
-          "description": "セールスインサイトダッシュボードは、リアルタイムの販売データを提供する高度な分析ツールです。",
+          "title": "売上インサイトダッシュボード",
+          "description": "売上インサイトダッシュボードは、企業に包括的なリアルタイムの売上データを提供するように設計された高度な分析ツールです。製品ライン、地理的地域、期間など、さまざまな側面から売上パフォーマンスを視覚化できる動的でインタラクティブなインターフェースを提供します。このダッシュボードは、既存のERPシステムと統合して売上データを抽出し、統合し、明確で実用的な形式で表示します。主な機能には、カスタマイズ可能なチャートとグラフ、詳細なデータを探索するためのドリルダウン機能、および将来の売上トレンドを予測する予測分析が含まれます。このツールを活用することで、企業はトップパフォーマー製品を特定し、改善の余地がある領域を特定し、売上戦略を最適化して収益成長を促進するための情報に基づいた意思決定を行うことができます。ダッシュボードは詳細な売上レポートの作成も容易にし、関係者が進捗状況を追跡し、売上イニシアチブの影響を測定できるようにします。これにより、営業チームは取引をより迅速かつ効果的に成立させるために必要な情報を提供し、最終的に全体的な売上パフォーマンスと収益性を向上させます。",
           "image": "project_14.png"
         },
         {
           "id": 2,
-          "title": "クライアント最適化分析",
-          "description": "クライアント最適化分析ツールは、クライアントエンゲージメントの深い洞察を提供します。",
+          "title": "顧客最適化分析",
+          "description": "顧客最適化分析ツールは、顧客エンゲージメント、行動、満足度に関する深い洞察を企業に提供します。顧客インタラクションのパターンと傾向を明らかにする高度な分析を提供することで、基本的なCRMデータをはるかに超えています。このツールは、CRMシステム、カスタマーサポートプラットフォーム、マーケティングオートメーションツールなど、さまざまなデータソースと統合し、顧客ライフサイクルの全体像を提供します。高度なセグメンテーション機能を備えており、企業は高価値の顧客を特定し、それに応じてサービスを調整できます。ツールには、顧客のフィードバックを評価し、改善の余地がある領域を特定するセンチメント分析も含まれています。顧客のニーズと好みを理解することで、企業は顧客維持率を高め、顧客生涯価値を高め、全体的な顧客満足度を向上させることができます。顧客最適化分析ツールは、顧客解約リスク、アップセル機会、クロスセル可能性に関する洞察を提供する実用的なレポートとダッシュボードも生成します。これにより、企業は顧客の問題に積極的に対処し、インタラクションをパーソナライズし、より強力な顧客関係を育成し、長期的なロイヤルティを高めることができます。",
           "image": "project_15.png"
         },
         {
           "id": 3,
           "title": "キャンペーンパフォーマンスダッシュボード",
-          "description": "キャンペーンパフォーマンスダッシュボードは、マーケティングキャンペーンのモニタリングと最適化を支援します。",
+          "description": "キャンペーンパフォーマンスダッシュボードは、企業がさまざまなチャネルでマーケティングキャンペーンを監視および最適化するのに役立ちます。クリック率、コンバージョン率、投資収益率（ROI）などの主要業績評価指標（KPI）を追跡するための中央プラットフォームを提供します。このダッシュボードは、マーケティングオートメーションプラットフォーム、ソーシャルメディアプラットフォーム、広告ネットワークと統合して、キャンペーンパフォーマンスの包括的なビューを提供します。リアルタイム分析が含まれており、企業はデータに基づいた意思決定を行い、キャンペーンをその場で調整できます。主な機能には、カスタマイズ可能なダッシュボード、自動レポート、A/Bテスト機能が含まれます。このツールを活用することで、企業は最も効果的なマーケティングチャネルを特定し、広告費を最適化し、マーケティングキャンペーンの全体的な効果を向上させることができます。キャンペーンパフォーマンスダッシュボードは詳細なキャンペーンレポートの作成も容易にし、マーケターは進捗状況を追跡し、イニシアチブの影響を測定できます。これにより、マーケティングチームはマーケティングROIを最大化し、キャンペーン目標を達成するために必要な洞察を得ることができます。",
           "image": "project_16.png"
         },
         {
           "id": 4,
           "title": "シームレスなオンボーディングワークフロー",
-          "description": "シームレスなオンボーディングワークフローは、新規ユーザーのためのオンボーディングプロセスを簡素化および強化します。",
+          "description": "シームレスなオンボーディングワークフローは、新規ユーザーのオンボーディングプロセスを簡素化および強化し、スムーズで効率的な移行を保証します。このツールは、アカウント作成、アクセスプロビジョニング、トレーニング資料の配布などの主要なオンボーディングタスクを自動化します。新規ユーザーをオンボーディングプロセスを通してガイドするユーザーフレンドリーなインターフェースを提供し、混乱を最小限に抑え、オンボーディングに必要な時間を短縮します。ワークフローはHRシステムやその他の関連プラットフォームと統合し、情報のシームレスな流れを確保します。主な機能には、自動通知、進捗状況の追跡、カスタマイズ可能なオンボーディングチェックリストが含まれます。オンボーディングプロセスを合理化することで、企業は新規ユーザーの満足度を向上させ、オンボーディングコストを削減し、生産性を向上させることができます。シームレスなオンボーディングワークフローは詳細なオンボーディングレポートの作成も容易にし、HRチームは進捗状況を追跡し、改善の余地がある領域を特定できます。これにより、HRチームは新規ユーザーを成功に導くポジティブなオンボーディングエクスペリエンスを作成できます。",
           "image": "project_17.png"
         }
       ]
