ormsection and blogdetails and translation updated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -63,6 +63,8 @@
 
     "erpProjects": {
       "title": "مشاريع تخطيط موارد المؤسسات لدينا",
+      "button": "الرجوع",
+
       "projects": [
         {
           "id": 1,
@@ -110,6 +112,23 @@
       ],
       "learnMore": "تعلم أكثر"
     },
+    "ormDetails": {
+      "title": "تفاصيل إدارة السمعة عبر الإنترنت",
+      "description": "تعتبر إدارة السمعة عبر الإنترنت (ORM) أمرًا بالغ الأهمية للحفاظ على صورة علامة تجارية إيجابية. وهي تنطوي على مراقبة سمعتك عبر الإنترنت والتأثير فيها وإدارتها. إليك نظرة متعمقة:",
+      "keyAspectsTitle": "الجوانب الرئيسية لإدارة السمعة عبر الإنترنت",
+      "monitoring": "مراقبة الإشارات عبر الإنترنت لعلامتك التجارية عبر منصات مختلفة.",
+      "responding": "الرد على المراجعات والتعليقات بسرعة ومهنية.",
+      "contentCreation": "إنشاء محتوى إيجابي للتأثير على نتائج البحث.",
+      "socialMedia": "إدارة تواجدك على وسائل التواصل الاجتماعي للتفاعل وبناء الثقة.",
+      "crisisManagement": "التعامل مع الدعاية السلبية وتخفيف الأضرار المحتملة.",
+      "benefitsTitle": "فوائد إدارة السمعة عبر الإنترنت الفعالة",
+      "enhancedTrust": "تعزيز الثقة والمصداقية مع جمهورك.",
+      "improvedBrandImage": "تحسين صورة العلامة التجارية وتصورها.",
+      "increasedSales": "زيادة المبيعات وولاء العملاء.",
+      "proactiveReputation": "إدارة السمعة الاستباقية.",
+      "competitiveAdvantage": "ميزة تنافسية في السوق.",
+      "conclusion": "يعد الاستثمار في إدارة السمعة عبر الإنترنت أمرًا ضروريًا لأي شركة تتطلع إلى بناء والحفاظ على تواجد قوي عبر الإنترنت. فهو يساعدك على التحكم في روايتك وبناء علاقات دائمة مع عملائك."
+    },
     "bannerDetails": {
       "title": "نقوم ببناء تطبيقات تحظى بشعبية في عالم التطبيقات",
       "description": "Birds OF EDEN هي شركة برمجيات مبتكرة مكرسة لتحويل الأفكار إلى واقع من خلال حلول تقنية مبتكرة. مهمتنا هي تمكين الشركات والأفراد من خلال برامج متقدمة تعزز الكفاءة والإنتاجية وتجربة المستخدم.",
@@ -118,7 +137,10 @@
         "حلول مبتكرة تعزز النمو والنجاح.",
         "الالتزام بالجودة وتجربة المستخدم المتميزة."
       ],
-      "getStarted": "ابدأ الآن"
+      "getStarted": "ابدأ الآن",
+      "featuresTitle": "الميزات الرئيسية",
+      "getStartedMessage": "هل أنت مستعد لتحويل فكرة تطبيقك إلى واقع؟ تواصل معنا اليوم للبدء",
+      "contactUs": "تواصل معنا"
     },
     "dronePage": {
       "title": "أحدث تقنياتنا",
@@ -424,6 +446,8 @@
     ]
   },
   "services": {
+    "showLess": "إظهار أقل",
+    "learnMore": "اعرف المزيد",
     "bigData": [
       {
         "icon": "icon1.png",
@@ -768,6 +792,7 @@
     "title": "انضم إلى فريقنا",
     "applyButton": "قدم الآن",
     "applyFor": "التقديم على",
+    "location": "الموقع",
     "form": {
       "namePlaceholder": "أدخل اسمك",
       "emailPlaceholder": "أدخل بريدك الإلكتروني",
@@ -869,9 +894,12 @@
             "title": "شاشات فائقة الدقة ومحطات إرساء:",
             "text": "محسّنة لكفاءة المهام المتعددة."
           }
-        ]
+        ],
+        "expButton": "استكشف المجموعات"
       }
     },
+    "netTitle": "حلول الشبكات والتكنولوجيا",
+    "netDescription": "معدات عالية الأداء لاتصال وإنتاجية سلسة.",
     "networkingAndTech": [
       {
         "image": "router_1.jpg",
