--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -62,6 +62,7 @@
     },
     "erpProjects": {
       "title": "আমাদের ইআরপি প্রকল্পসমূহ",
+      "button": "ফিরে যান",
       "projects": [
         {
           "id": 1,
@@ -109,6 +110,23 @@
       ],
       "learnMore": "আরও জানুন"
     },
+    "ormDetails": {
+      "title": "ওআরএম বিবরণ",
+      "description": "অনলাইন খ্যাতি ব্যবস্থাপনা (ওআরএম) একটি ইতিবাচক ব্র্যান্ড ইমেজ বজায় রাখার জন্য অত্যন্ত গুরুত্বপূর্ণ। এর মধ্যে আপনার অনলাইন খ্যাতি পর্যবেক্ষণ, প্রভাবিত এবং পরিচালনা করা জড়িত। এখানে একটি গভীরতর চেহারা:",
+      "keyAspectsTitle": "ওআরএম এর মূল দিক",
+      "monitoring": "বিভিন্ন প্ল্যাটফর্ম জুড়ে আপনার ব্র্যান্ডের অনলাইন উল্লেখ পর্যবেক্ষণ করা।",
+      "responding": "পর্যালোচনা এবং মন্তব্যের দ্রুত এবং পেশাদারভাবে প্রতিক্রিয়া জানানো।",
+      "contentCreation": "অনুসন্ধান ফলাফল প্রভাবিত করার জন্য ইতিবাচক বিষয়বস্তু তৈরি করা।",
+      "socialMedia": "যুক্ত হতে এবং আস্থা তৈরি করতে আপনার সামাজিক মিডিয়া উপস্থিতি পরিচালনা করা।",
+      "crisisManagement": "নেতিবাচক প্রচার পরিচালনা করা এবং সম্ভাব্য ক্ষতি প্রশমিত করা।",
+      "benefitsTitle": "কার্যকর ওআরএম এর সুবিধা",
+      "enhancedTrust": "আপনার দর্শকদের সাথে উন্নত আস্থা এবং বিশ্বাসযোগ্যতা।",
+      "improvedBrandImage": "উন্নত ব্র্যান্ড ইমেজ এবং উপলব্ধি।",
+      "increasedSales": "বিক্রয় এবং গ্রাহক আনুগত্য বৃদ্ধি।",
+      "proactiveReputation": "সক্রিয় খ্যাতি ব্যবস্থাপনা।",
+      "competitiveAdvantage": "বাজারে প্রতিযোগিতামূলক সুবিধা।",
+      "conclusion": "একটি শক্তিশালী অনলাইন উপস্থিতি তৈরি এবং বজায় রাখার জন্য ওআরএম-এ বিনিয়োগ করা যেকোনো ব্যবসার জন্য অপরিহার্য। এটি আপনাকে আপনার গল্প নিয়ন্ত্রণ করতে এবং আপনার গ্রাহকদের সাথে স্থায়ী সম্পর্ক তৈরি করতে সহায়তা করে।"
+    },
     "bannerDetails": {
       "title": "আমরা এমন অ্যাপ তৈরি করি যা অ্যাপওয়ার্ল্ডে ট্রেন্ডিং হয়",
       "description": "বার্ডস অফ এডেন হল একটি উদ্ভাবনী প্রযুক্তি সংস্থা যা উদ্ভাবনী প্রযুক্তি সমাধানের মাধ্যমে ধারণাগুলিকে বাস্তবে রূপ দেওয়ার জন্য নিবেদিত। আমাদের লক্ষ্য হল অত্যাধুনিক সফটওয়্যার দিয়ে ব্যবসা এবং ব্যক্তিদের ক্ষমতায়ন করা যা দক্ষতা, উৎপাদনশীলতা এবং ব্যবহারকারীর অভিজ্ঞতা বাড়ায়।",
@@ -117,7 +135,10 @@
         "নবীন সমাধান যা বৃদ্ধির গতি বাড়ায়।",
         "গুণমান এবং ব্যতিক্রমী ব্যবহারকারীর অভিজ্ঞতায় প্রতিশ্রুতি।"
       ],
-      "getStarted": "শুরু করুন"
+      "getStarted": "শুরু করুন",
+      "featuresTitle": "প্রধান বৈশিষ্ট্য",
+      "getStartedMessage": "আপনার অ্যাপের ধারণাকে বাস্তবে রূপান্তর করতে প্রস্তুত? শুরু করতে আজই আমাদের সাথে যোগাযোগ করুন!",
+      "contactUs": "আমাদের সাথে যোগাযোগ করুন"
     },
     "dronePage": {
       "title": "আমাদের সর্বশেষ প্রযুক্তি",
@@ -423,6 +444,8 @@
     ]
   },
   "services": {
+    "showLess": "সংক্ষিপ্ত করুন",
+    "learnMore": "আরও জানুন",
     "bigData": [
       {
         "icon": "icon1.png",
@@ -765,6 +788,7 @@
     "title": "আমাদের দলে যোগ দিন",
     "applyButton": "আবেদন করুন",
     "applyFor": "আবেদন করুন",
+    "location": "অবস্থান",
     "form": {
       "namePlaceholder": "আপনার নাম লিখুন",
       "emailPlaceholder": "আপনার ইমেইল লিখুন",
@@ -866,9 +890,12 @@
             "title": "আল্ট্রা এইচডি মনিটর এবং ডকিং স্টেশন:",
             "text": "মাল্টিটাস্কিং দক্ষতার জন্য অপ্টিমাইজ করা হয়েছে।"
           }
-        ]
+        ],
+        "expButton": "সংগ্রহগুলি দেখুন"
       }
     },
+    "netTitle": "নেটওয়ার্কিং এবং প্রযুক্তি সমাধান",
+    "netDescription": "নির্বিঘ্ন সংযোগ এবং উৎপাদনশীলতার জন্য উচ্চ-কর্মক্ষমতা সরঞ্জাম।",
     "networkingAndTech": [
       {
         "image": "router_1.jpg",
