--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -63,6 +63,7 @@
 
     "erpProjects": {
       "title": "当社のERPプロジェクト",
+      "button": "戻る",
       "projects": [
         {
           "id": 1,
@@ -109,6 +110,23 @@
       ],
       "learnMore": "もっと知る"
     },
+    "ormDetails": {
+      "title": "オンライン評判管理の詳細",
+      "description": "オンライン評判管理（ORM）は、肯定的なブランドイメージを維持するために非常に重要です。これには、オンラインでの評判の監視、影響、管理が含まれます。詳細はこちらをご覧ください。",
+      "keyAspectsTitle": "オンライン評判管理の主要な側面",
+      "monitoring": "さまざまなプラットフォームでのブランドのオンライン言及を監視します。",
+      "responding": "レビューやコメントに迅速かつ専門的に対応します。",
+      "contentCreation": "検索結果に影響を与える肯定的なコンテンツを作成します。",
+      "socialMedia": "エンゲージメントと信頼を構築するために、ソーシャルメディアでの存在感を管理します。",
+      "crisisManagement": "否定的な広報を処理し、潜在的な損害を軽減します。",
+      "benefitsTitle": "効果的なオンライン評判管理の利点",
+      "enhancedTrust": "視聴者との信頼と信頼性を高めます。",
+      "improvedBrandImage": "ブランドイメージと認識を向上させます。",
+      "increasedSales": "売上と顧客ロイヤルティを向上させます。",
+      "proactiveReputation": "積極的な評判管理。",
+      "competitiveAdvantage": "市場での競争上の優位性。",
+      "conclusion": "強力なオンラインプレゼンスを構築および維持しようとするすべての企業にとって、オンライン評判管理への投資は不可欠です。これにより、ストーリーをコントロールし、顧客との永続的な関係を構築できます。"
+    },
     "bannerDetails": {
       "title": "私たちはアプリワールドでトレンドになるアプリを構築します",
       "description": "Birds OF EDENは、革新的なテクノロジーソリューションを通じてアイデアを現実に変えることに専念している最先端のソフトウェア会社です。私たちの使命は、効率、生産性、ユーザーエクスペリエンスを向上させる最先端のソフトウェアで企業と個人を支援することです。",
@@ -117,7 +135,10 @@
         "成長と成功を促進する革新的なソリューション。",
         "品質と優れたユーザーエクスペリエンスへのコミットメント。"
       ],
-      "getStarted": "始める"
+      "getStarted": "始める",
+      "featuresTitle": "主な機能",
+      "getStartedMessage": "アプリのアイデアを現実に変える準備はできていますか？始めるには、今日お問い合わせください！",
+      "contactUs": "お問い合わせ"
     },
     "dronePage": {
       "title": "最新のテクノロジー",
@@ -415,6 +436,8 @@
     ]
   },
   "services": {
+    "showLess": "表示を減らす",
+    "learnMore": "もっと詳しく知る",
     "bigData": [
       {
         "icon": "icon1.png",
@@ -757,6 +780,7 @@
     "title": "私たちのチームに参加しませんか",
     "applyButton": "今すぐ応募",
     "applyFor": "応募する",
+    "location": "場所",
     "form": {
       "namePlaceholder": "あなたの名前を入力してください",
       "emailPlaceholder": "あなたのメールアドレスを入力してください",
@@ -859,9 +883,12 @@
             "title": "ウルトラHDモニター＆ドッキングステーション：",
             "text": "マルチタスク効率のために最適化。"
           }
-        ]
+        ],
+        "expButton": "コレクションを見る"
       }
     },
+    "netTitle": "ネットワーキングと技術ソリューション",
+    "netDescription": "シームレスな接続と生産性を実現する高性能機器。",
     "networkingAndTech": [
       {
         "image": "router_1.jpg",
